feat: additional velocity functions
Refs: #157
